# Copyright (C) 2006-2008 Daniel Prevost <dprevost@users.sourceforge.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

CLEANFILES = *~

# Install m4 macros in this directory
#m4datadir = $(datadir)/aclocal

# List your m4 macros here
m4macros =                  \
   ac_cxx_bool.m4           \
   ac_func_mkdir.m4         

# The following is boilerplate
#m4data_DATA = $(m4macros) 
#EXTRA_DIST = $(m4data_DATA) 
EXTRA_DIST = $(m4macros) 

